<resources>
    <string name="app_name">Donation 5.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- String in donate app dev -->
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">donateSubtitle</string>
    <string name="donateButton">Donate</string>

    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>

    <string name="numberAmount">Amount</string>
    <string name="totalDonate">Total so far  $0</string>

    <!-- menu -->
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="menuReset">Reset</string>

    <!--  Report activity  -->
    <string name="reportTitle">Report</string>
    <string name="title_activity_report">Report</string>
    
    <!--  default  -->
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    
</resources>