<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.donationapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="settings"/>
    <item
        android:id="@+id/menuReport"
        android:orderInCategory="101"
        android:title="@string/menuReport"
        app:showAsAction="never"
        android:onClick="report"/>
    <item
        android:id="@+id/menuDonate"
        android:orderInCategory="102"
        android:title="@string/menuDonate"
        android:onClick="donate"/>
    <item
        android:id="@+id/menuReset"
        android:orderInCategory="103"
        android:title="@string/menuReset"
        android:onClick="reset"/>
</menu>